--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,37 @@
     <artifactId>s7soft</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1</version>
-	<name>newsmaker-web</name>
+	<name>s7soft</name>
 	<url>http://maven.apache.org</url>
+
+	<properties>
+		<java.version>1.8</java.version>
+		<spring.version>4.0.1.RELEASE</spring.version>
+    </properties>
+
 	<dependencies>
+        <!-- Spring dependencies -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>3.2.8.RELEASE</version>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -21,6 +45,16 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>newsmaker-web</finalName>
+		<finalName>s7soft</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<packagingExcludes>WEB-INF/lib/javax.servlet-api-3.0.1.jar</packagingExcludes>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
