--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
 
 	<properties>
 
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+
 		<!-- Generic properties -->
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,7 +19,7 @@
 		<!-- Web -->
 		<jsp.version>2.2</jsp.version>
 		<jstl.version>1.2</jstl.version>
-		<servlet.version>2.5</servlet.version>
+		<servlet.version>3.1.0</servlet.version>
 
 
 		<!-- Spring -->
@@ -32,9 +35,50 @@
 		<!-- Test -->
 		<junit.version>4.11</junit.version>
 
+		<spring-jdbc.version>4.0.6.RELEASE</spring-jdbc.version>
+		<!-- MyBatis -->
+		<MyBatis.version>3.3.0</MyBatis.version>
+		<!-- MyBatis Spring -->
+		<MyBatis.Spring.version>1.2.2</MyBatis.Spring.version>
+		<!-- Connector-J -->
+		<MySqlConnector.version>5.1.34</MySqlConnector.version>
+		<!-- CommonsDbcp -->
+		<CommonsDbcp.version>2.1</CommonsDbcp.version>
+
 	</properties>
 
 	<dependencies>
+<!-- MyBatis -->
+
+<dependency>
+    <groupId>org.mybatis</groupId>
+    <artifactId>mybatis</artifactId>
+    <version>${MyBatis.version}</version>
+</dependency>
+<!-- MyBatis Spring -->
+<dependency>
+    <groupId>org.mybatis</groupId>
+    <artifactId>mybatis-spring</artifactId>
+    <version>${MyBatis.Spring.version}</version>
+</dependency>
+<!-- MySqlConnector -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>${MySqlConnector.version}</version>
+</dependency>
+<!-- Commons-dbcp -->
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-dbcp2</artifactId>
+    <version>${CommonsDbcp.version}</version>
+</dependency>
+<!-- Spring JDBC -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-jdbc</artifactId>
+    <version>${spring-jdbc.version}</version>
+</dependency>
 
 		<!-- Spring MVC -->
 		<dependency>
@@ -49,9 +93,10 @@
 			<artifactId>jstl</artifactId>
 			<version>${jstl.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
+			<artifactId>javax.servlet-api</artifactId>
 			<version>${servlet.version}</version>
 			<scope>provided</scope>
 		</dependency>
